--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,32 @@
+html,
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  /* font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; */
+  font-family: Georgia;
+}
+
+body.fontLoaded {
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+#app {
+  min-height: 100%;
+  min-width: 100%;
+}
+
+p,
+label {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  line-height: 1.5em;
+}
+
+h1 {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
 }
